--- a/src/app/language/EN/HailMary.json
+++ b/src/app/language/EN/HailMary.json
@@ -1,4 +1,4 @@
 {
   "Title": "",
-  "Text": "<strong>Hail Mary</strong>, full of grace. The Lord is with thee. Blessed art thou among women, And blessed is the fruit of thy womb, Jesus. Holy Mary, Mother of God, Pray for us sinners, Now and at the hour of our death. Amen."
+  "Text": "Hail Mary, full of grace. The Lord is with thee. Blessed art thou among women, And blessed is the fruit of thy womb, Jesus. Holy Mary, Mother of God, Pray for us sinners, Now and at the hour of our death. Amen."
 }
