--- a/src/app/language/EN/GloryBe.json
+++ b/src/app/language/EN/GloryBe.json
@@ -1,4 +1,4 @@
 {
   "Title": "",
-  "Text": "<strong>Glory be</strong> to the Father, and to the Son, and to the Holy Spirit. As it was in the beginning, is now, and ever shall be, world without end. Amen."
+  "Text": "Glory be to the Father, and to the Son, and to the Holy Spirit. As it was in the beginning, is now, and ever shall be, world without end. Amen."
 }
